--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <body>
         <header>
             <h1>
-                <img src="images/logo.svg" width="140" alt="Coffee Masters" />
+                <img src="images/logo.png" width="140" alt="Coffee Masters" />
             </h1>
             <nav>
                 <a
